--- a/app/templates/components/work-space/work-space-advantage-container.hbs
+++ b/app/templates/components/work-space/work-space-advantage-container.hbs
@@ -1,7 +1,7 @@
 <div class="work-space-advantage-container">
 
 {{#if contentObject.planSelected}}
-    
+
     <div class="divider">
         <div class="divider-rect">
         </div>
@@ -68,8 +68,8 @@
 {{/if}} -->
 
 {{#if contentObject.contentObjectDoubleTable}}
-        
-   
+
+
     <div class="advantage-container">
 
         <img src="{{contentObject.contentObjectDoubleTable.image}}" class="image">
@@ -92,12 +92,12 @@
                     <h2>{{contentObject.contentObjectDoubleTable.firstRowSubtitle}}</h2>
                     <h4>{{contentObject.contentObjectDoubleTable.firstRowSubsubtitle}}</h4>
                     <h3>{{contentObject.contentObjectDoubleTable.firstRowDescription}}</h3>
-                    
+
                     <div class= "advantage-options-to-here-title">
                         <h1>{{contentObject.contentObjectDoubleTable.descriptionActionButton}}</h1>
                     </div>
 
-                   <button class="advantage-access-here-button" style = "background:url(../assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;" >{{#link-to "visit-us" }}{{contentObject.contentObjectDoubleTable.titleActionButton}}{{/link-to}}</button>
+                   <button class="advantage-access-here-button" style = "background:url(./assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;" >{{#link-to "visit-us" }}{{contentObject.contentObjectDoubleTable.titleActionButton}}{{/link-to}}</button>
 
                    <div class="advantage-access-here-button-background-borders">
                    </div>
@@ -116,11 +116,11 @@
                         <h1>{{contentObject.contentObjectDoubleTable.descriptionActionButton}}</h1>
                     </div>
 
-                   <button class="advantage-access-here-button" style = "background:url(../assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;" >{{#link-to "visit-us" }}{{contentObject.contentObjectDoubleTable.titleActionButton}}{{/link-to}}</button>
+                   <button class="advantage-access-here-button" style = "background:url(./assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;" >{{#link-to "visit-us" }}{{contentObject.contentObjectDoubleTable.titleActionButton}}{{/link-to}}</button>
 
                    <div class="advantage-access-here-button-background-borders">
                    </div>
-                    
+
                 </div>
             </div>
         </div>
@@ -129,7 +129,7 @@
 
 
 {{#if contentObject.contentObjectOneTable}}
-         
+
     <div class="advantage-container-do-it">
           <div class="advantage-meeting-room-background-borders">
          </div>
@@ -151,12 +151,12 @@
             <div class="advantage-meeting-information-title">
                 <h1>{{contentObject.contentObjectOneTable.descriptionActionButton}}</h1>
             </div>
-            <button class="advantage-do-it-button" style = "background:url(../assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;"> {{#link-to "visit-us" }}{{contentObject.contentObjectOneTable.titleActionButton}}{{/link-to}}</button>
+            <button class="advantage-do-it-button" style = "background:url(./assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;"> {{#link-to "visit-us" }}{{contentObject.contentObjectOneTable.titleActionButton}}{{/link-to}}</button>
               <div class="advantage-do-it-buttom-background-borders">
          </div>
         </div>
     </div>
-    
+
          <!-- <div class="advantage-support-container">
 
             <div class="advantage-support-title">
@@ -187,13 +187,13 @@
 
 
 {{#if contentObject.contentObjectSecondTable}}
-        
+
      <div  class="advantage-container-do-it">
 
           <div class="advantage-meeting-room-background-borders">
          </div>
         <img src="{{contentObject.contentObjectSecondTable.image}}" class="image">
-        
+
         <div class="title">
             <h1>{{contentObject.contentObjectSecondTable.title}}</h1>
             <h2><b>{{contentObject.contentObjectSecondTable.firstTitlePriceSubsubtitle}}</b>{{contentObject.contentObjectSecondTable.firstPriceFirstSubsubtitle}}</h2>
@@ -210,7 +210,7 @@
                 <h1>{{contentObject.contentObjectSecondTable.descriptionActionButton}}</h1>
             </div>
 
-            <button class="advantage-do-it-button"  style = "background:url(../assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentObjectSecondTable.titleActionButton}}{{/link-to}}</button>
+            <button class="advantage-do-it-button"  style = "background:url(./assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentObjectSecondTable.titleActionButton}}{{/link-to}}</button>
               <div class="advantage-do-it-buttom-background-borders">
          </div>
         </div>
@@ -219,13 +219,13 @@
 {{/if}}
 
 {{#if contentObject.contentObjectThirdTable}}
-            
+
       <div class="advantage-container-do-it">
 
           <div class="advantage-meeting-room-background-borders">
          </div>
         <img src="{{contentObject.contentObjectThirdTable.image}}" class="image">
-        
+
         <div class="title">
             <h1>{{contentObject.contentObjectThirdTable.title}}</h1>
             <h3>{{contentObject.contentObjectThirdTable.firstSubsubtitle}}</h3>
@@ -246,7 +246,7 @@
                 <h1>{{contentObject.contentObjectThirdTable.descriptionActionButton}}</h1>
             </div>
 
-            <button class="advantage-do-it-button"  style = "background:url(../assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentObjectThirdTable.titleActionButton}}{{/link-to}}</button>
+            <button class="advantage-do-it-button"  style = "background:url(./assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentObjectThirdTable.titleActionButton}}{{/link-to}}</button>
               <div class="advantage-do-it-buttom-background-borders">
          </div>
         </div>
@@ -255,7 +255,7 @@
 {{/if}}
 
 <!-- {{#if contentObject.contentObjectThirdTable.itensTable}}
-            
+
       <div class="advantage-support-container">
 
         <div class="advantage-support-title">
@@ -285,19 +285,19 @@
 {{/if}} -->
 
 {{#if contentObject.contentObjectWithoutTable}}
-            
+
     <div class="advantage-container-do-it">
 
           <div class="advantage-meeting-room-background-borders">
          </div>
         <img src="{{contentObject.contentObjectWithoutTable.image}}" class="image">
-        
+
         <div class="title">
             <h1>{{contentObject.contentObjectWithoutTable.title}}</h1>
             <h4>{{contentObject.contentObjectWithoutTable.firstSubsubtitle}}</h4>
             <h2><b>{{contentObject.contentObjectWithoutTable.firstTitlePriceSubsubtitle}}</b>{{contentObject.contentObjectWithoutTable.firstPriceFirstSubsubtitle}}</h2>
              <h2><b>{{contentObject.contentObjectWithoutTable.secondTitlePriceSubsubtitle}}</b>{{contentObject.contentObjectWithoutTable.secondPriceFirstSubsubtitle}}</h2>
-            
+
             <h3>{{contentObject.contentObjectWithoutTable.secondSubtitle}}</h3>
         {{#if contentObject.contentObjectWithoutTable.secondSubsubtitle}}
             <h4>{{contentObject.contentObjectWithoutTable.secondSubsubtitle}}</h4>
@@ -314,7 +314,7 @@
                 <h1>{{contentObject.contentObjectWithoutTable.descriptionActionButton}}</h1>
             </div>
 
-            <button class="advantage-do-it-button"  style = "background:url(../assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentObjectWithoutTable.titleActionButton}}{{/link-to}}</button>
+            <button class="advantage-do-it-button"  style = "background:url(./assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentObjectWithoutTable.titleActionButton}}{{/link-to}}</button>
               <div class="advantage-do-it-buttom-background-borders">
          </div>
         </div>
@@ -324,7 +324,7 @@
 
 
 {{#if contentObject.contentSecondObjectWithoutTable}}
-                
+
     <div class="advantage-container-do-it">
 
         <img src="{{contentObject.contentSecondObjectWithoutTable.image}}" class="image">
@@ -345,7 +345,7 @@
                 <h1>{{contentObject.contentSecondObjectWithoutTable.descriptionActionButton}}</h1>
             </div>
 
-            <button class="advantage-do-it-button"  style = "background:url(../assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentSecondObjectWithoutTable.titleActionButton}}{{/link-to}}</button>
+            <button class="advantage-do-it-button"  style = "background:url(./assets/images/work-space-button-advantage-responsive.png) no-repeat; background-size:100%;">{{#link-to "visit-us" }}{{contentObject.contentSecondObjectWithoutTable.titleActionButton}}{{/link-to}}</button>
               <div class="advantage-do-it-buttom-background-borders">
          </div>
         </div>
