--- a/app/templates/components/sign-up-membership-detail-container.hbs
+++ b/app/templates/components/sign-up-membership-detail-container.hbs
@@ -106,6 +106,16 @@
                   </button>
               {{/if}}
 
+              <div class="form-observations">
+                  <h4>
+                      *Campos Obrigatórios <br><br>
+
+                      Seu email e senha serão usados para ter acesso a nossa Rede Social +55lab.co. <a href="https://www.w3schools.com/html/" target="_blank"> Saiba Mais </a>
+                  </h4>
+
+                  <div class="label-icon"> </div>
+              </div>
+
 
             </div>
 
