--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -8,6 +8,7 @@
 }
 @include font-face('FjordOne-Regular');
 @include font-face('BebasNeue-Bold');
+@include font-face('BebasNeue-Book');
 @include font-face('BebasNeue-Regular');
 @include font-face('aleo-regular-webfont');
 
